--- a/rpg/index.html
+++ b/rpg/index.html
@@ -27,6 +27,6 @@
                 <ul id="log-list"></ul>
             </div>
         </div>
-        <script src="js/script.js"></script>
+        <script src="js/script.js" type="module"></script>
     </body>
 </html>
